export data for daily effort and total pay